k8s/workloads/komga/manifest.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: komga
  labels:
    app: komga
spec:
  replicas: 1
  selector:
    matchLabels:
      app: komga
  template:
    metadata:
      labels:
        app: komga
    spec:
      nodeSelector:
        platform.io/type: pi
      containers:
        - name: komga
          image: gotson/komga
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: data
              mountPath: /comics
              readOnly: false
            - name: manga
              mountPath: /manga
              readOnly: false
            - name: config
              mountPath: /config
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: data
        - name: manga
          persistentVolumeClaim:
            claimName: manga
        - name: config
          persistentVolumeClaim:
            claimName: config
---
apiVersion: v1
kind: Service
metadata:
  name: komga
spec:
  ports:
    - port: 25600
      targetPort: 25600
  selector:
    app: komga
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: komga

spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`komga.rvserver.online`)
      kind: Rule
      services:
        - name: komga
          port: 25600
